--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ dependencies = [
     "numpy>=1.24.0",
     "scipy>=1.10.0",
     "rich>=13.0.0",
+    "pyarrow>=14.0.0",
+    "duckdb>=0.9.0",
 ]
 
 [project.optional-dependencies]
@@ -44,6 +46,9 @@ dev = [
     "ruff>=0.0.270",
     "sphinx>=7.0.0",
     "sphinx-rtd-theme>=1.3.0",
+]
+duckdb = [
+    "duckdb>=0.9.0",
 ]
 
 [project.urls]
